# Volumetric-Fusion

./: .gitattributes  .gitignore  .gitmodules  Project Plan.docx  README.md  glfw-imgui.props  installpcl.txt  opencv.props
VolumetricFusion/: CMakeCache.txt  CMakeLists.txt  Makefile  VolumetricFusion.sln  build_macos.sh  cmake_install.cmake  example.hpp
VolumetricFusion/ExampleOpenGL/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
VolumetricFusion/ExampleOpenGL/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
VolumetricFusion/ExampleOpenGL/common_utils/: Common.h  IncludeImplCUDA.hpp  RuntimeAssertion.h  RuntimeAssertion_Impl.hpp
VolumetricFusion/ExampleOpenGL/data/: colorExtrinsics.mat  colorExtrinsics_1.mat  colorExtrinsics_2.mat  colorExtrinsics_3.mat  colorExtrinsics_5.mat  colorIntrinsics.mat  colorIntrinsics_1.mat  colorIntrinsics_2.mat  colorIntrinsics_3.mat  colorIntrinsics_4.mat  colorIntrinsics_5.mat  depthExtrinsics.mat  depthExtrinsics_1.mat  depthExtrinsics_2.mat  depthExtrinsics_3.mat  depthExtrinsics_4.mat  depthExtrinsics_5.mat  depthIntrinsics.mat  depthIntrinsics_2.mat  depthIntrinsics_3.mat  depthIntrinsics_4.mat  depthIntrinsics_5.mat  mesh.ply
VolumetricFusion/ExampleOpenGL/heatmap_fusion/: BoundingBox.h  GLShader.cpp  GLShader.h  IOManagement.cpp  IOManagement.h  ImageProcessingCUDA.cu  ImageProcessingCUDA.h  MeshProcessingCPU.cpp  MeshProcessingCPU.h  Precompilation.cpp  Precompilation.cu  RuntimeSettings.h  StaticSettings.h  Texture.cu  Texture.h  TriMesh.h  Utils.h  VertexMesh.h  ViewerInput.h  VirtualCamera.h  VisualizationHelper.cpp  VisualizationHelper.h
VolumetricFusion/ExampleOpenGL/matrix_lib/: MatrixLibInclude.h
VolumetricFusion/ExampleOpenGL/shaders/: depth_image.frag  depth_image.vert  normal_image.frag  phong.frag  phong.vert  phong_instanced.frag  phong_instanced.vert  points.frag  points.vert  triangle.vert
VolumetricFusion/Tests/: Tests.vcxproj  test.cpp
VolumetricFusion/VolumetricFusion/: CMakeCache.txt  CMakeLists.txt  CaptureDevice.cpp  CaptureDevice.h  CaptureDevice.hpp  CaptureDevice.hpp.orig  ComputeShader.hpp  Data.hpp  Data_BACKUP_1173.hpp  Data_LOCAL_1173.hpp  Enums.hpp  Example.cpp  FileAccess.hpp  FlannWrapper.hpp  Fusion.hpp  HighConfidenceFilter.hpp  ImGuiHelpers.hpp  Main.cpp  Main.h  MainWindow.cpp  Makefile  MarchingCubes.h  MarchingCubes.hpp  Mesh.h  Mesh.hpp  MultiFileStream.cpp  MultiFileStream.cpp.orig  MultiFileStream.h  OPENCV3_DEBUG .props  OPENCV3_RELEASE.props  Optimization.hpp  PinholeCamera.hpp  PointCorrespondenceError.hpp  PostProcessing.cpp  Processing.cpp  Processing.hpp  ProcessingBlocks.hpp  RecordPlaybackMainWindow.cpp  Recorder.cpp  Recorder.h  (+28 more)
VolumetricFusion/VolumetricFusion/Debug/: vc142.idb
VolumetricFusion/VolumetricFusion/captures/: frame_1572280044186.973633.ply  frame_1572280089101.532715.ply  frame_1572280144076.168457.ply  frame_1572280169040.054688.ply
VolumetricFusion/VolumetricFusion/figure_recording/: frame_figure_0_20191028_172722.ply  frame_figure_180_20191028_172902.ply  frame_figure_270_20191028_172927.ply  frame_figure_90_20191028_172807.ply
VolumetricFusion/VolumetricFusion/optimization/: BundleAdjustment.hpp  CeresOptimizationProblem.hpp  CharacteristicPoints.hpp  ICP.hpp  NearestNeighbor.hpp  OptimizationProblem.hpp  PointCorrespondenceError.hpp  Procrustes.hpp  ReprojectionError.hpp  desktop.ini
VolumetricFusion/VolumetricFusion/plys/: cpu_marching_cube.ply  marching_cube.ply  save_marching_cube.ply
VolumetricFusion/VolumetricFusion/shader/: characteristic_points.frag  characteristic_points.geom  characteristic_points.vert  compute_shader.comp  coordinate.vs  countTriangles.comp  marchingCubes.comp  mesh.frag  mesh.vert  only_color.vs  pointcloud.frag  pointcloud.fs  pointcloud.vs  pointcloud_new.vert  texture.vs  tsdf.comp  voxelgrid.comp  (+11 more)
VolumetricFusion/align/: CMakeLists.txt  Makefile  align.vcxproj  cmake_install.cmake
VolumetricFusion/align-advanced/: CMakeLists.txt  Makefile  align-advanced.vcxproj  cmake_install.cmake
VolumetricFusion/ar-basic/: CMakeLists.txt  Makefile  ar-basic.vcxproj  cmake_install.cmake
VolumetricFusion/callback/: CMakeLists.txt  Makefile  callback.vcxproj  cmake_install.cmake
VolumetricFusion/capture/: CMakeLists.txt  Makefile  capture.vcxproj  cmake_install.cmake
VolumetricFusion/dnn/: dnn.vcxproj
VolumetricFusion/grabcuts/: grabcuts.vcxproj
VolumetricFusion/hello-realsense/: CMakeLists.txt  Makefile  cmake_install.cmake  hello-realsense.vcxproj
VolumetricFusion/im-show/: im-show.vcxproj
VolumetricFusion/measure/: CMakeLists.txt  Makefile  cmake_install.cmake  measure.vcxproj
VolumetricFusion/motion/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  motion.vcxproj
VolumetricFusion/multicam/: CMakeLists.txt  Makefile  cmake_install.cmake  multicam.vcxproj
VolumetricFusion/pointcloud/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pointcloud.vcxproj
VolumetricFusion/pose/: CMakeLists.txt  Makefile  cmake_install.cmake  pose.vcxproj
VolumetricFusion/pose-predict/: CMakeLists.txt  Makefile  cmake_install.cmake  pose-predict.vcxproj
VolumetricFusion/post-processing/: CMakeLists.txt  Makefile  cmake_install.cmake  post-processing.vcxproj
VolumetricFusion/record-playback/: CMakeLists.txt  Makefile  RecordPlaybackMainWindow.cpp  cmake_install.cmake  record-playback.vcxproj
VolumetricFusion/save-to-disk/: CMakeLists.txt  Makefile  cmake_install.cmake  rs-save-to-disk-output-Color-metadata.csv  rs-save-to-disk-output-Depth-metadata.csv  save-to-disk.vcxproj
VolumetricFusion/sensor-control/: CMakeLists.txt  Makefile  cmake_install.cmake  sensor-control.vcxproj
VolumetricFusion/software-device/: CMakeLists.txt  Makefile  cmake_install.cmake  software-device.vcxproj
VolumetricFusion/trajectory/: CMakeLists.txt  Makefile  cmake_install.cmake  trajectory.vcxproj
VolumetricFusion/tsdf-fusion/: Exp_SO3.m  OPENCV_DEBUG.props  OPENCV_RELEASE.props  demo  demo.cu  hat_SO3.m  read_bag_example.py  tsdf-fusion.sln  tsdf-fusion.vcxproj  tsdf.ply  tsdf2mesh.m  utils.hpp
(+319 files in other folders)
